--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a {
+  padding: left 10px;;
+  padding: right 10px;
+  background-color: violet;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 12px;
+}
+ p#featured-property {
+width: 800px;
+text-align: center;
+}
+
+
+div{
+  background-color:tomato;
+  text-align:center;
+  width:25%;
+  float:left;
+}
